fix text for btn info-bot and accordion

--- a/src/html/home/faq.html
+++ b/src/html/home/faq.html
@@ -83,13 +83,13 @@
                 <div class="accordion__item">
                     <div class="accordion__item-head">
                         <h4 class="mini-title accordion__item-title">
-                            Как оформить заявку?
+                            Как оформить вызов медсестры?
                         </h4>
                     </div>
                     <div class="accordion__item-content">
                         <div class="__inner">
                             <p class="text accordion__item-text">
-                                Все просто! Заполните анкету на сайте, указав ваши контактные данные. После чего вам станут доступны номера медсестер. Выберите нужного вам специалиста, и позвонив по номеру специалиста, вы оформите вызов. 
+                                Всё просто! Перейдите на страницу специалистов и выберите из списка подходящую вам фотокарточку медсестры, чтобы открыть ее профиль. Нажмите на "Показать номер" в открывшемся профиле медсестры, после чего сайт попросит вас ввести свои имя и номер телефона. После того, как вы пройдете верификацию, вам станут доступны номера всех медсестер, с которыми вы сможете напрямую связаться и оформить их вызов.
                             </p>
                         </div>
                     </div>
