--- a/src/html/single/info.html
+++ b/src/html/single/info.html
@@ -37,7 +37,7 @@
               Свяжитесь <br />
               со специалистом
             </p>
-            @@include('../components/blue-btn.html', {"text": "Показать телефон","class": "info-bot__btn"})
+            @@include('../components/blue-btn.html', {"text": "Показать номер","class": "info-bot__btn"})
           </div>
         </div>
       </div>
